--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             завдань.
           </p>
         </li>
-        
+
       </ul>
       <section class=" container  section">
         <h2>Чим ми займаємося</h2>
@@ -253,7 +253,7 @@
       <section  >
         <h2>Постійні клієнти</h2>
         <ul class="ul-li-svg">
-          <li class="li-svg transform"> <svg class="gr transform"><use  href="/icomon/symbol-defs.svg#icon-gr1"></use></svg></li>
+          <li class="li-svg transform"> <svg class="gr transform"><use  href="./icomon/symbol-defs.svg#icon-gr1"></use></svg></li>
           <li> <svg class="gr transform"><use  href="./icomon/symbol-defs.svg#icon-gr2"></use></svg></li>
           <li> <svg class="gr transform"><use  href="./icomon/symbol-defs.svg#icon-gr3"></use></svg></li>
           <li> <svg class="gr transform"><use  href="./icomon/symbol-defs.svg#icon-gr4"></use></svg></li>
